CSS will be injected via JS in Development mode

--- a/magda-web-client/public/index.html
+++ b/magda-web-client/public/index.html
@@ -56,9 +56,7 @@
     <script src="/assets/homepage/homepage-config.js"></script>
     <script src="/server-config.js"></script>
     <title>Search</title>
-    <% if(process.env.NODE_ENV === "development"){ %>
-    <link href="<%=htmlWebpackPlugin.files.css%>" rel="stylesheet">
-    <% }else{ %>
+    <% if(process.env.NODE_ENV !== "development"){ %>
     <link href="/api/v0/content/stylesheet.css" rel="stylesheet">
     <% } %>
 </head>
@@ -74,6 +72,6 @@
 
 </noscript>
 <div id="root"></div>
-<script type="text/javascript" src="<%=htmlWebpackPlugin.files.js%>"></script>
+<script type="text/javascript" src="<%=htmlWebpackPlugin.files.js[0]%>"></script>
 </body>
 </html>
