--- a/magda-correspondence-api/emailTpls/request.html
+++ b/magda-correspondence-api/emailTpls/request.html
@@ -53,10 +53,12 @@
 <body>
     <div class="content">
         <div class="crest">
-            <img class="image" src="cid:govAUCrest" alt="Australian Government coat of arms">
+            {{#inlineImg}}
+                <img class="image" src="emailTpls/assets/AU-Govt-Logo.jpg" alt="Australian Government coat of arms" />
+            {{/inlineImg}}
         </div>
         <br />
-        <img class="image" src="cid:dataGovLogo" alt="Data gov logo">
+        {{#inlineImg}}<img class="image" src="emailTpls/assets/Logo.jpg" alt="Data gov logo" />{{/inlineImg}}
         Hi there, <br /><br />
         A request has been raised for a dataset. Please respond to this request as soon as possible.<br /><br />
         The query is from {{message.senderName}}, <a href="mailto:{{message.senderEmail}}">{{message.senderEmail}}</a>:
