--- a/magda-correspondence-api/emailTpls/question.html
+++ b/magda-correspondence-api/emailTpls/question.html
@@ -62,7 +62,7 @@
         Hi there, <br /><br />
         A question has been raised in relation to a dataset: {{dataset.title}}, 
         published by {{dataset.publisher}}, at
-        <a href="{{dataset.url}}">{{dataset.url}}</a>.
+        <a href="{{&dataset.url}}">{{&dataset.url}}</a>.
         Please respond to this query as soon as possible.<br /><br />
         The query is from {{message.senderName}}, <a href="mailto:{{message.senderEmail}}">{{message.senderEmail}}</a>:
         <br /><br />
