--- a/magda-correspondence-api/emailTpls/feedback.html
+++ b/magda-correspondence-api/emailTpls/feedback.html
@@ -62,7 +62,7 @@
         Hi there, <br /><br />
         Feedback has been left on a dataset: {{dataset.title}}, 
         published by {{dataset.publisher}}, at
-        <a href="{{dataset.url}}">{{dataset.url}}</a>.
+        <a href="{{&dataset.url}}">{{&dataset.url}}</a>.
         The feedback is from {{message.senderName}}, <a href="mailto:{{message.senderEmail}}">{{message.senderEmail}}</a>:
         <br /><br />
         <p>{{&message.html}}</p>
