update res reference to emailTemplates in tpls

--- a/magda-correspondence-api/emailTemplates/question.html
+++ b/magda-correspondence-api/emailTemplates/question.html
@@ -54,11 +54,11 @@
     <div class="content">
         <div class="crest">
             {{#inlineImg}}
-                <img class="image" src="emailTpls/assets/AU-Govt-Logo.jpg" alt="Australian Government coat of arms" />
+                <img class="image" src="emailTemplates/assets/AU-Govt-Logo.jpg" alt="Australian Government coat of arms" />
             {{/inlineImg}}
         </div>
         <br />
-        {{#inlineImg}}<img class="image" src="emailTpls/assets/Logo.jpg" alt="Data gov logo" />{{/inlineImg}}
+        {{#inlineImg}}<img class="image" src="emailTemplates/assets/Logo.jpg" alt="Data gov logo" />{{/inlineImg}}
         Hi there, <br /><br />
         A question has been raised in relation to a dataset: {{dataset.title}}, 
         published by {{dataset.publisher}}, at
