replace templates & logo with generic content

--- a/magda-correspondence-api/emailTemplates/feedback.html
+++ b/magda-correspondence-api/emailTemplates/feedback.html
@@ -54,11 +54,11 @@
     <div class="content">
         <div class="crest">
             {{#inlineImg}}
-                <img class="image" src="emailTemplates/assets/top-left-logo.jpg" alt="Australian Government coat of arms" />
+                <img class="image" src="emailTemplates/assets/top-left-logo.jpg" alt="Top Left Logo" />
             {{/inlineImg}}
         </div>
         <br />
-        {{#inlineImg}}<img class="image" src="emailTemplates/assets/centered-logo.jpg" alt="Data gov logo" />{{/inlineImg}}
+        {{#inlineImg}}<img class="image" src="emailTemplates/assets/centered-logo.jpg" alt="Centered Logo" />{{/inlineImg}}
         Hi there, <br /><br />
         Feedback has been left on a dataset: {{dataset.title}}, 
         published by {{dataset.publisher}}, at
@@ -71,11 +71,8 @@
             <button type="button">Reply</button>
         </a>
         <br /><br />
-        The Australian Government has mandated that agencies have a
-        responsibility to be transparent to any public consumer of open data.
-        If you have questions about why you got this email or what to do, email data@digital.gov.au <br /><br />
         Sincerely, <br /> <br />
-        The Digital Transformation Agency at Data.gov.au
+        Magda
     </div>
 </body>
 </html>
