--- a/magda-web-client/public/200.html
+++ b/magda-web-client/public/200.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/api/v0/content/favicon.ico">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap" />
     <script src="/server-config.js"></script>
     <title>Search</title>
