--- a/magda-web-client/public/index.html
+++ b/magda-web-client/public/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="google-site-verification" content="nV420NeaH-ckqtpFS1CwE8eFRaJHRD1gT6t4NX9-W0A" />
     <meta name="theme-color" content="#320e3b"/>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/api/v0/content/favicon.ico">
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap"/>
     <script>
     var _rollbarConfig = {
