--- a/magda-web-client/public/index.html
+++ b/magda-web-client/public/index.html
@@ -1,69 +1,53 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="google-site-verification" content="nV420NeaH-ckqtpFS1CwE8eFRaJHRD1gT6t4NX9-W0A" />
-    <meta name="theme-color" content="#320e3b"/>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/api/v0/content/favicon.ico">
-    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap"/>
-    <script>
-    var _rollbarConfig = {
-    accessToken: "cf418960a0ae4c00a1eeec43ae7500c8",
-    enabled: "%NODE_ENV%" === "production",
-    captureUncaught: true,
-    captureUnhandledRejections: true,
-    verbose: true, // This will now log to console.log, as well as Rollbar
-    hostBlackList: [
-        "127.0.0.1",
-        "localhost",
-        "192.168.99.1",
-        "192.168.99.100",
-        "minikube.data.gov.au"
-    ], // exclude local dev
-    payload: {
-        environment: "production",
-        client: {
-            javascript: {
-                source_map_enabled: true, //this is now true by default
-                code_version: "%REACT_APP_SHA1%",
-                // Optionally have Rollbar guess which frames the error was thrown from
-                // when the browser does not provide line and column numbers.
-                guess_uncaught_frames: true
-            }
-        }
-    }
-};
-</script>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta
+            name="google-site-verification"
+            content="nV420NeaH-ckqtpFS1CwE8eFRaJHRD1gT6t4NX9-W0A"
+        />
+        <meta name="theme-color" content="#320e3b" />
+        <link
+            rel="shortcut icon"
+            href="%PUBLIC_URL%/api/v0/content/favicon.ico"
+        />
+        <link
+            rel="sitemap"
+            type="application/xml"
+            title="Sitemap"
+            href="/sitemap"
+        />
 
-    <!--[if lte IE 9]>
-    <script type="text/javascript">
-        "use strict";
-        // IE9 Console Bug Fix
-        window.console = window.console || {};
-        window.console.log = window.console.log || function () {
-        };
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.10/es5-shim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.10/es5-sham.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-shim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-sham.min.js"></script>
-    <![endif]-->
+        <!--[if lte IE 9]>
+            <script type="text/javascript">
+                "use strict";
+                // IE9 Console Bug Fix
+                window.console = window.console || {};
+                window.console.log = window.console.log || function() {};
+            </script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.10/es5-shim.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.10/es5-sham.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-shim.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.3/es6-sham.min.js"></script>
+        <![endif]-->
 
-    <script src="/server-config.js"></script>
-    <title>Search</title>
-    <% if(process.env.NODE_ENV !== "development"){ %>
-    <link href="/api/v0/content/stylesheet.css" rel="stylesheet">
-    <% } %>
-</head>
-<body class="au-body">
-<noscript>
-    For full functionality of this site it is necessary to enable JavaScript.
-    Here are the <a href="https://www.enable-javascript.com/" target="_blank">
-    instructions how to enable JavaScript in your web browser</a>.
-</noscript>
-<div id="root"></div>
-<script type="text/javascript" src="<%=htmlWebpackPlugin.files.js[0]%>"></script>
-</body>
+        <script src="/server-config.js"></script>
+        <title>Search</title>
+    </head>
+    <body class="au-body">
+        <noscript>
+            For full functionality of this site it is necessary to enable
+            JavaScript. Here are the
+            <a href="https://www.enable-javascript.com/" target="_blank">
+                instructions how to enable JavaScript in your web browser</a
+            >.
+        </noscript>
+        <div id="root"></div>
+        <script
+            type="text/javascript"
+            src="<%=htmlWebpackPlugin.files.js[0]%>"
+        ></script>
+    </body>
 </html>
