--- a/magda-web-client/public/index.html
+++ b/magda-web-client/public/index.html
@@ -20,6 +20,10 @@
             href="/sitemap"
         />
 
+        <script type="text/javascript">
+            window.react_app_sha1 = "%REACT_APP_SHA1%";
+        </script>
+
         <!--[if lte IE 9]>
             <script type="text/javascript">
                 "use strict";
