--- a/magda-correspondence-api/emailTemplates/request.html
+++ b/magda-correspondence-api/emailTemplates/request.html
@@ -1,76 +1,89 @@
 <!DOCTYPE html>
 <html lang="en-au">
-<head>
-    <style type="text/css">
-        body {
-            margin: auto;
-            display: block;
-        }
+    <head>
+        <style type="text/css">
+            body {
+                margin: auto;
+                display: block;
+            }
 
-        body>div>img {
-            padding-left: 10%;
-        }
+            body > div > img {
+                padding-left: 10%;
+            }
 
-        button {
-            color: #FFFFFF;
-            text-align: center;
-            text-decoration: none;
-            line-height: 0;
-            background-color: #00698F;
-            cursor: pointer;
-            border-radius: 4px;
-            width: 160px;
-            height: 50px;
-            font-size: 16px;
-        }
+            button {
+                color: #ffffff;
+                text-align: center;
+                text-decoration: none;
+                line-height: 0;
+                background-color: #00698f;
+                cursor: pointer;
+                border-radius: 4px;
+                width: 160px;
+                height: 50px;
+                font-size: 16px;
+            }
 
-        .content {
-            text-align: left;
-            padding-left: 10%;
-            padding-right: 10%;
-            line-height: 24px;
-            font-size: 16px;
-            width: 50%;
-            margin: 0 auto;
-        }
+            .content {
+                text-align: left;
+                padding-left: 10%;
+                padding-right: 10%;
+                line-height: 24px;
+                font-size: 16px;
+                width: 50%;
+                margin: 0 auto;
+            }
 
-        .content>.crest>img {
-            margin: 0;
-        }
+            .content > .crest > img {
+                margin: 0;
+            }
 
-        .content>img {
-            display: block;
-            margin: auto;
-        }
+            .content > img {
+                display: block;
+                margin: auto;
+            }
 
-        .content>a>button {
-            display: block;
-            margin: auto;
-        }
-    </style>
-</head>
+            .content > a > button {
+                display: block;
+                margin: auto;
+            }
+        </style>
+    </head>
 
-<body>
-    <div class="content">
-        <div class="crest">
-            {{#inlineImg}}
-                <img class="image" src="emailTemplates/assets/top-left-logo.jpg" alt="Top Left Logo" />
-            {{/inlineImg}}
+    <body>
+        <div class="content">
+            <div class="crest">
+                {{#inlineImg}}
+                <img
+                    class="image"
+                    src="emailTemplates/assets/top-left-logo.jpg"
+                    alt="Top Left Logo"
+                />
+                {{/inlineImg}}
+            </div>
+            <br />
+            {{#inlineImg}}<img
+                class="image"
+                src="emailTemplates/assets/centered-logo.jpg"
+                alt="Centered Logo"
+            />{{/inlineImg}} Hi there, <br /><br />
+            A request has been raised for a dataset. Please respond to this
+            request as soon as possible. {{message.note}}<br /><br />
+            The query is from {{message.senderName}},
+            <a href="mailto:{{message.senderEmail}}">{{message.senderEmail}}</a
+            >: <br /><br />
+            <p>{{&message.html}}</p>
+            <br /><br />
+            <a
+                target="_top"
+                href="mailto:{{message.senderEmail}}?subject={{subject}}"
+            >
+                <button type="button">Reply</button>
+            </a>
+            <br /><br />
+            Sincerely, <br />
+            <br />
+            Magda
         </div>
-        <br />
-        {{#inlineImg}}<img class="image" src="emailTemplates/assets/centered-logo.jpg" alt="Centered Logo" />{{/inlineImg}}
-        Hi there, <br /><br />
-        A request has been raised for a dataset. Please respond to this request as soon as possible.<br /><br />
-        The query is from {{message.senderName}}, <a href="mailto:{{message.senderEmail}}">{{message.senderEmail}}</a>:
-        <br /><br />
-        <p>{{&message.html}}</p>
-        <br /><br />
-        <a target="_top" href="mailto:{{message.senderName}}?subject={{subject}}">
-            <button type="button">Reply</button>
-        </a>
-        <br /><br />
-        Sincerely, <br /> <br />
-        Magda
-    </div>
-</body>
+    </body>
 </html>
